--- a/client/src/App.css
+++ b/client/src/App.css
@@ -334,6 +334,8 @@ button {
 .landing {
   position: relative;
   background: url('./img/showcase.jpg') no-repeat center center/cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   height: 100vh;
 }
 
